--- a/back/Gemfile
+++ b/back/Gemfile
@@ -32,7 +32,8 @@ gem "bootsnap", require: false
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
-
+gem 'carrierwave', '~> 3.0'
+gem 'image_processing', '~> 1.12'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem "rack-cors"
 
