投稿機能の設定

--- a/front/.env.local	
+++ b/front/.env.local	
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_GOOGLE_CLIENT_ID="931892095989-vl1r7aerdphbm41nn5bc0496atp9abos.apps.googleusercontent.com"
 NEXT_PUBLIC_GOOGLE_CLIENT_SECRET="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"
 
-NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_API_URL=https://ai-coten.onrender.com
 OPENAI_API_KEY="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"
