--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.92.6",
+    "@react-three/fiber": "^8.15.12",
     "axios": "^1.6.2",
     "localforage": "^1.10.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.160.0"
   },
   "devDependencies": {
