--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.10.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.160.0"
