--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "dalle-nextjs-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.92.6",
-    "@react-three/fiber": "^8.15.12",
-    "axios": "^1.6.2",
-    "localforage": "^1.10.0",
-    "next": "14.0.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.16",
+    "@react-three/drei": "^9.92.7",
+    "axios": "^1.6.4",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
-    "r3f-perf": "^7.1.2",
+    "openai": "^4.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.160.0"
+    "react-hook-form": "^7.48.2",
+    "three": "^0.160.0",
+    "uuid-by-string": "^4.0.0",
+    "wouter": "^2.12.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,9 +30,10 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.0.3",
+    "husky": "^8.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
