--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.16",
+    "@mui/material": "^5.15.3",
     "@react-three/drei": "^9.92.7",
     "axios": "^1.6.4",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "openai": "^4.24.1",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
