--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-modal": "^3.16.1",
     "three": "^0.160.0",
     "uuid-by-string": "^4.0.0",
     "wouter": "^2.12.1"
