画像生成フォームの作成

--- a/front/.env
+++ b/front/.env
@@ -1,7 +1,9 @@
 GOOGLE_CLIENT_ID="931892095989-vl1r7aerdphbm41nn5bc0496atp9abos.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 
-NEXT_PUBLIC_API_URL=http://back:3000
+NEXT_PUBLIC_API_URL="http://localhost:3000"
 OPENAI_API_KEY=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
 NEXTAUTH_URL="http://localhost:8000"
 NEXTAUTH_SECRET="757+kCPlyduRrwzz3qwQheWJVeLXavWvZyjnfIZiDyU"
+NEXT_PUBLIC_GITHUB_CLIENT_ID="2ac57d930d14b2c2ba6b"
+NEXT_PUBLIC_GITHUB_CLIENT_SECRET="cb81e961bff799b57fdc4ef04de00bbfeb746f21"
