--- a/front/.env.development
+++ b/front/.env.development
@@ -1,7 +1,7 @@
 GOOGLE_CLIENT_ID="931892095989-vl1r7aerdphbm41nn5bc0496atp9abos.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 
-NEXT_PUBLIC_API_URL=https://ai-coten.onrender.com/:3000
+NEXT_PUBLIC_API_URL="http://back:3000"
 OPENAI_API_KEY=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
 NEXTAUTH_URL="http://localhost:8000"
 NEXTAUTH_SECRET="757+kCPlyduRrwzz3qwQheWJVeLXavWvZyjnfIZiDyU"
