--- a/front/package.json
+++ b/front/package.json
@@ -9,23 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.3",
     "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.15.3",
     "@react-three/drei": "^9.92.7",
     "axios": "^1.6.4",
+    "camelcase-keys": "^9.1.2",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "openai": "^4.24.1",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.49.2",
     "react-modal": "^3.16.1",
+    "swr": "^2.2.4",
     "three": "^0.160.0",
     "uuid-by-string": "^4.0.0",
-    "wouter": "^2.12.1"
+    "wouter": "^2.12.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
