--- a/back/Gemfile
+++ b/back/Gemfile
@@ -41,6 +41,7 @@ group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
   gem 'pry'
+  gem 'pry-byebug'
 end
 
 group :development do
