--- a/front/.env
+++ b/front/.env
@@ -1,7 +1,7 @@
-GOOGLE_CLIENT_ID="817210681937-o5k9vn2t1v2b1duglb8vqm5msf2f1sdt.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_ID="330046949184-vi5rh8q9k6i5rnm7vj1fbnb0apa4hkqa.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
 
-NEXT_PUBLIC_API_URL="http://localhost:3000"
+NEXT_PUBLIC_API_URL="http://back:3000"
 OPENAI_API_KEY=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
 NEXTAUTH_URL="http://localhost:8000"
 NEXTAUTH_SECRET="757+kCPlyduRrwzz3qwQheWJVeLXavWvZyjnfIZiDyU"
