--- a/front/.env.production
+++ b/front/.env.production
@@ -1,7 +1,7 @@
 GOOGLE_CLIENT_ID="817210681937-o5k9vn2t1v2b1duglb8vqm5msf2f1sdt.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 
-NEXT_PUBLIC_API_URL=http://back:3000
+NEXT_PUBLIC_API_URL="http://back:3000"
 OPENAI_API_KEY=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
 NEXTAUTH_URL="http://localhost:8000"
 NEXTAUTH_SECRET="757+kCPlyduRrwzz3qwQheWJVeLXavWvZyjnfIZiDyU"
