--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-modal": "^3.16.1",
+    "styled-components": "^6.1.8",
     "swr": "^2.2.4",
     "three": "^0.160.0",
     "uuid-by-string": "^4.0.0",
