--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.92.7",
     "axios": "^1.6.4",
     "camelcase-keys": "^9.1.2",
+    "dat.gui": "^0.7.9",
     "localforage": "^1.10.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
