--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "@mui/icons-material": "^5.15.3",
     "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.15.3",
-    "@react-three/drei": "^9.92.7",
+    "@react-three/drei": "^9.96.1",
+    "@react-three/fiber": "^8.15.14",
     "axios": "^1.6.4",
     "camelcase-keys": "^9.1.2",
     "dat.gui": "^0.7.9",
@@ -30,7 +31,7 @@
     "react-modal": "^3.16.1",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
-    "three": "^0.160.0",
+    "three": "^0.160.1",
     "uuid-by-string": "^4.0.0",
     "wouter": "^2.12.1",
     "yup": "^1.3.3"
