画像投稿用モーダルの表示完了

--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.3",
     "@mui/joy": "^5.0.0-beta.16",
-    "@mui/material": "^5.15.3",
+    "@mui/material": "^5.15.6",
+    "@nextui-org/react": "^2.2.9",
     "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.14",
     "axios": "^1.6.4",
