--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,9 @@
     "@react-three/fiber": "^8.15.14",
     "axios": "^1.6.4",
     "camelcase-keys": "^9.1.2",
+    "compressorjs": "^1.2.1",
     "dat.gui": "^0.7.9",
+    "dexie": "^3.2.4",
     "localforage": "^1.10.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
