--- a/front/vercel.json
+++ b/front/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "api/generate-image.ts": {
-        "runtime": "edge"
+        "runtime": "experimental-edge"
       }
     }
   }
