--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.15.6",
     "@nextui-org/react": "^2.2.9",
+    "@pmndrs/assets": "^1.6.0",
     "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.14",
     "axios": "^1.6.4",
@@ -27,12 +28,14 @@
     "localforage": "^1.10.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
-    "openai": "^4.24.1",
+    "openai": "^4.26.0",
     "r3f-perf": "^7.1.2",
+    "random-words": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
     "three": "^0.160.1",
