--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
@@ -25,6 +26,7 @@
     "compressorjs": "^1.2.1",
     "dat.gui": "^0.7.9",
     "dexie": "^3.2.4",
+    "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
