--- a/back/config/database.yml
+++ b/back/config/database.yml
@@ -84,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: ai_coten_db
-  username: ai_coten_db_user
+  database: ai_coten_db_fg85
+  username: ai_coten_db_fg85_user
   url: <%= ENV['DATABASE_URL'] %>
