--- a/back/Gemfile
+++ b/back/Gemfile
@@ -44,6 +44,7 @@ group :development, :test do
   gem 'pry-byebug'
   gem 'fog-aws'
   gem "aws-sdk-s3", require: false
+  gem 'fog-google'
 end
 
 group :development do
