--- a/back/Gemfile
+++ b/back/Gemfile
@@ -41,6 +41,7 @@ gem 'fog-aws'
 gem "aws-sdk-s3", require: false
 gem 'fog-google'
 gem 'dotenv-rails'
+gem 'cloudinary'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -51,7 +52,7 @@ group :development, :test do
   gem 'fog-aws'
   gem "aws-sdk-s3", require: false
   gem 'fog-google'
-  
+  gem 'cloudinary'
 end
 
 group :development do
