--- a/front/package.json
+++ b/front/package.json
@@ -19,8 +19,8 @@
     "@mui/material": "^5.15.6",
     "@nextui-org/react": "^2.2.9",
     "@pmndrs/assets": "^1.6.0",
-    "@react-three/drei": "^9.96.1",
-    "@react-three/fiber": "^8.15.14",
+    "@react-three/drei": "^9.99.3",
+    "@react-three/fiber": "^8.15.16",
     "axios": "^1.6.4",
     "camelcase-keys": "^9.1.2",
     "compressorjs": "^1.2.1",
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
