--- a/back/Gemfile
+++ b/back/Gemfile
@@ -42,6 +42,7 @@ gem "aws-sdk-s3", require: false
 gem 'fog-google'
 gem 'dotenv-rails'
 gem 'cloudinary'
+gem 'google-cloud-storage'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
