--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "compressorjs": "^1.2.1",
     "dat.gui": "^0.7.9",
     "dexie": "^3.2.4",
+    "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "next": "^14.0.4",
