--- a/front/package.json
+++ b/front/package.json
@@ -21,13 +21,17 @@
     "@pmndrs/assets": "^1.6.0",
     "@react-three/drei": "^9.99.3",
     "@react-three/fiber": "^8.15.16",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "axios": "^1.6.4",
     "camelcase-keys": "^9.1.2",
+    "clsx": "^2.1.0",
     "compressorjs": "^1.2.1",
     "dat.gui": "^0.7.9",
     "dexie": "^3.2.4",
     "firebase": "^10.8.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.8",
     "localforage": "^1.10.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -42,6 +46,7 @@
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
+    "tailwind-merge": "^2.2.1",
     "three": "^0.160.1",
     "uuid-by-string": "^4.0.0",
     "wouter": "^2.12.1",
