--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.15.6",
+    "@next/third-parties": "^14.1.2-canary.4",
     "@nextui-org/react": "^2.2.9",
     "@pmndrs/assets": "^1.6.0",
     "@react-three/drei": "^9.99.3",
