--- a/front/package.json
+++ b/front/package.json
@@ -58,9 +58,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.162.0",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.3",
+    "eslint-plugin-react": "^7.34.1",
     "husky": "^8.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
